renamed nucleo-g474 project stuff to sonar_nucleo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 #
 # Core project settings
 #
-project(NUCLEO-G474-example)
+project(sonar_nucleo)
 enable_language(C ASM)
 
 message("Build type: " ${CMAKE_BUILD_TYPE})
